--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,15 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    ports:
+      - "5435:5432"
   web:
     build: .
-    command: bash -c "python users2Delete/manage.py makemigrations && python users2Delete/manage.py migrate && python users2Delete/manage.py runserver 0.0.0.0:8000"
+    command: bash -c "pip install -r requirements.txt && python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8003"
     volumes:
-      - .:/users2Delete
+      - .:/users
     ports:
-      - "8000:8000"
+      - "8003:8003"
     depends_on:
       - db
 
