--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 asgiref==3.5.2
+cffi==1.15.1
+cryptography==38.0.1
 Django==4.1.2
+djangorestframework==3.14.0
+dnspython==2.2.1
+email-validator==1.3.0
 factory-boy==3.2.1
 Faker==15.1.1
+idna==3.4
 psycopg2==2.9.4
+pycparser==2.21
+PyJWT==2.6.0
 python-dateutil==2.8.2
+pytz==2022.5
 six==1.16.0
 sqlparse==0.4.3
 tzdata==2022.5
