--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 cffi==1.15.1
 cryptography==38.0.1
 Django==4.1.2
+django-cors-headers==3.13.0
 djangorestframework==3.14.0
 dnspython==2.2.1
 email-validator==1.3.0
