--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 asgiref==3.5.2
+celery==5.2.6
 cffi==1.15.1
 cryptography==38.0.1
-Django==4.1.2
+Django~=4.1.1
 django-cors-headers==3.13.0
 djangorestframework==3.14.0
 dnspython==2.2.1
@@ -9,6 +10,7 @@ email-validator==1.3.0
 factory-boy==3.2.1
 Faker==15.1.1
 idna==3.4
+kombu==5.2.4
 psycopg2==2.9.4
 pycparser==2.21
 PyJWT==2.6.0
