--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ psycopg2==2.9.4
 pycparser==2.21
 PyJWT==2.6.0
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 pytz==2022.5
 six==1.16.0
 sqlparse==0.4.3
